--- a/css/common.css
+++ b/css/common.css
@@ -1,84 +1,86 @@
 body {
-    width: 100%;
-    overflow-x: hidden;
-    margin: 0 auto;
-    font-size: 18px;
-    line-height: 1.2;
-    font-family: 'Gilroy500';
-    color: var(--text);
-    background-color: var(--main-bg);
+  width: 100%;
+  overflow-x: hidden;
+  margin: 0 auto;
+  font-size: 18px;
+  line-height: 1.2;
+  font-family: "Gilroy500";
+  color: var(--text);
+  background-color: var(--main-bg);
 }
 
 .container {
-    max-width: 1002px;
-    margin: 0 auto;
-    padding: 0 30px;
+  max-width: 1002px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
 
 .container--small {
-    max-width: 995px;
+  max-width: 995px;
 }
 
 body.lock {
-    overflow: hidden;
+  overflow: hidden;
+}
+
+.mode-dark {
+  background-color: var(--text);
+  color: var(--main-bg);
 }
 
 .title {
-    font-family: 'Gilroy700';
-    font-size: 34px;
-    line-height: 42px;
-    text-align: center;
+  font-family: "Gilroy700";
+  font-size: 34px;
+  line-height: 42px;
+  text-align: center;
 }
 
 .line-clamp {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
-.lang__list {
-    display: flex;
-    writing-mode: vertical-lr;
+.mode__list {
+  display: flex;
+  flex-direction: column;
 }
 
-.lang__item {
-    padding: 10px 0;
-    color: var(--text-lighter);
+.mode__item {
+  padding: 10px 0;
+  cursor: pointer;
+  text-align: center;
+  color: var(--text-lighter);
 }
 
-.lang__item:not(:last-child) {
-    border-bottom: 1px solid var(--text);
+.mode__item:not(:last-child) {
+  border-bottom: 1px solid var(--text);
 }
 
-.lang__item.active {
-    color: var(--text)
+.mode__item.active {
+  color: var(--text);
 }
 
-.lang--revers {
-    display: none;
+.mode--revers {
+  display: none;
 }
-
 
 @media screen and (max-width: 768px) {
-    .lang {
-        position: fixed;
-        bottom: 85px;
-        right: 45px;
-    }
+  .mode {
+    position: fixed;
+    bottom: 85px;
+    right: 45px;
+  }
 }
 
 @media screen and (min-width: 769px) {
-    div.lang.lang--revers {
-        display: block;
-        position: static;
-    }
+  div.mode.mode--revers {
+    display: block;
+    position: static;
+  }
 
-    .lang {
-        display: none;
-    }
-
-    .lang__list {
-        transform: rotate(180deg);
-    }
+  .mode {
+    display: none;
+  }
 }
