--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,7 @@
 :root {
-    --text: #070707;
-    --main-bg: #ffffff;
-    --section-bg: #f6f6f6;
-    --text-lighter: #828282;
+  --text: #070707;
+  --main-bg: #ffffff;
+  --section-bg: #f6f6f6;
+  --text-lighter: #828282;
+  --bg-light: #fbecec;
 }
