--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,98 +1,96 @@
 .header {
-    position: relative;
-    padding: 68px 0 83px;
-    font-family: Gilroy700;
+  position: relative;
+  padding: 68px 0 83px;
+  font-family: Gilroy700;
 }
 
 .header__top {
-    position: absolute;
-    padding: 66px 0 26px 26px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100vh;
-    transform: translateX(100vw);
-    font-size: 34px;
-    color: var(--text-lighter);
-    background-color: var(--main-bg);
-    overflow-y: auto;
-    transition: all .4s ease;
+  position: absolute;
+  padding: 66px 0 26px 26px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  transform: translateX(100vw);
+  font-size: 34px;
+  color: var(--text-lighter);
+  background-color: var(--main-bg);
+  overflow-y: auto;
+  transition: all 0.4s ease;
 }
 
 .header__top.active {
-    transform: none;
-    transition: all .4s ease;
+  transform: none;
+  transition: all 0.4s ease;
 }
 
 .header__item {
-    transition: color .3s ease;
+  transition: color 0.3s ease;
 }
 
 .header__item:not(:last-child) {
-    margin-bottom: 68px;
+  margin-bottom: 68px;
 }
 
 .header__item:hover {
-    color: var(--text);
-    transition: color .3s ease;
+  color: var(--text);
+  transition: color 0.3s ease;
 }
 
 .header__bottom {
-    display: flex;
-    flex-direction: column;
-    z-index: 0;
+  display: flex;
+  flex-direction: column;
+  z-index: 0;
 }
 
 .header__title {
-    margin-bottom: 23px;
-    font-size: 47px;
-    line-height: 1;
+  margin-bottom: 23px;
+  font-size: 47px;
+  line-height: 1;
 }
 
 .header__subtitle {
-    margin-bottom: 36px;
-    font-family: Gilroy500;
-    font-size: 18px;
+  margin-bottom: 36px;
+  font-family: Gilroy500;
+  font-size: 25px;
 }
 
 img {
-    width: 100%;
-    max-height: 540px;
-    object-fit: cover;
+  width: 100%;
+  max-height: 540px;
+  object-fit: cover;
 }
 
-
 @media screen and (min-width: 769px) {
+  .header {
+    padding: 0;
+  }
 
-    .header {
-        padding: 0;
-    }
+  .header__top {
+    display: block;
+    position: static;
+    transform: none;
+    padding: 30px 0;
+    border-bottom: 1px solid var(--text-lighter);
+    margin-bottom: 40px;
+    height: 22px;
+  }
 
-    .header__top {
-        display: block;
-        position: static;
-        transform: none;
-        padding: 30px 0;
-        border-bottom: 1px solid var(--text-lighter);
-        margin-bottom: 40px;
-        height: 22px;
-    }
+  .header__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    font-size: 18px;
+  }
 
-    .header__list {
-        display: flex;
-        justify-content: space-between;
-        gap: 50px;
-        font-size: 18px;
-    }
+  .header__bottom {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: end;
+  }
 
-    .header__bottom {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: end;
-    }
-
-    .header__item:not(:last-child) {
-        margin-bottom: 0;
-    }
+  .header__item:not(:last-child) {
+    margin-bottom: 0;
+  }
 }
