--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,53 +1,64 @@
 .footer {
-    padding: 82px 0 92px;
-    text-align: center;
+  padding: 52px 0;
+  text-align: center;
 }
 
 .footer__title {
-    margin-bottom: 27px;
+  margin-bottom: 27px;
 }
 
 .footer__subtitle {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .footer__btn {
-    display: block;
-    max-width: 350px;
-    padding: 12px;
-    margin: 0 auto 48px;
-    width: 100%;
-    color: var(--main-bg);
-    background-color: var(--text);
-    border-radius: 25px;
+  display: block;
+  max-width: 350px;
+  padding: 12px;
+  margin: 0 auto 48px;
+  width: 100%;
+  color: var(--bg-light);
+  background-color: var(--text-secondary);
+  border-radius: 25px;
+  cursor: pointer;
+  transition: all ease 0.2s;
+}
+
+.footer__btn:hover {
+  background-color: var(--bg-light);
+  color: var(--text-secondary);
+  transition: all ease 0.2s;
 }
 
 .footer__social {
-    max-width: 345px;
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
-    margin: 0 auto 48px;
+  max-width: 345px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 0 auto 48px;
 }
 
-.footer__social-link>.icon {
-    max-height: 40px;
-    max-width: 40px;
+.footer__social-link > i {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  padding: 5px;
+  line-height: 32px;
+  font-size: 18px;
+  background-color: var(--text-secondary);
+  color: var(--bg-light);
+  transition: all ease 0.2s;
 }
 
-.footer__like {
-    font-size: 14px;
-    color: var(--text-lighter);
+.footer__social-link > i:hover {
+  color: var(--text-secondary);
+  background-color: var(--bg-light);
+  transition: all ease 0.2s;
 }
 
 @media screen and (min-width: 768px) {
-    .footer__btn {
-        max-width: 180px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .footer__social {
-        gap: 25px;
-    }
+  .footer__btn {
+    max-width: 180px;
+    width: 100%;
+  }
 }
