--- a/css/common.css
+++ b/css/common.css
@@ -23,15 +23,10 @@ body.lock {
   overflow: hidden;
 }
 
-.mode-dark {
-  background-color: var(--text);
-  color: var(--main-bg);
-}
-
 .title {
   font-family: "Gilroy700";
   font-size: 34px;
-  line-height: 42px;
+  line-height: 1.2;
   text-align: center;
 }
 
@@ -51,7 +46,7 @@ body.lock {
   padding: 10px 0;
   cursor: pointer;
   text-align: center;
-  color: var(--bg-light);
+  color: var(--bg-mode);
 }
 
 .mode__item:not(:last-child) {
@@ -59,7 +54,7 @@ body.lock {
 }
 
 .mode__item.active {
-  color: var(--text);
+  color: var(--text-secondary);
 }
 
 .mode--revers {
@@ -69,8 +64,12 @@ body.lock {
 @media screen and (max-width: 768px) {
   .mode {
     position: fixed;
-    bottom: 85px;
-    right: 45px;
+    bottom: 35px;
+    right: 25px;
+  }
+
+  .mode__item i {
+    font-size: 24px;
   }
 }
 
@@ -78,6 +77,7 @@ body.lock {
   div.mode.mode--revers {
     display: block;
     position: static;
+    margin-bottom: 10px;
   }
 
   .mode {
