--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  padding: 68px 0 83px;
+  padding: 55px 0 80px;
   font-family: Gilroy700;
 }
 
@@ -18,6 +18,7 @@
   background-color: var(--main-bg);
   overflow-y: auto;
   transition: all 0.4s ease;
+  z-index: 5;
 }
 
 .header__top.active {
@@ -34,7 +35,7 @@
 }
 
 .header__item:hover {
-  color: var(--text);
+  color: var(--text-secondary);
   transition: color 0.3s ease;
 }
 
@@ -48,6 +49,7 @@
   margin-bottom: 23px;
   font-size: 47px;
   line-height: 1;
+  color: var(--text-secondary);
 }
 
 .header__subtitle {
@@ -56,22 +58,29 @@
   font-size: 25px;
 }
 
+.header__img {
+  position: relative;
+  width: 100%;
+  max-height: 325px;
+  overflow: hidden;
+}
+
 img {
   width: 100%;
-  max-height: 540px;
+  height: 100%;
   object-fit: cover;
 }
 
 @media screen and (min-width: 769px) {
   .header {
-    padding: 0;
+    padding: 0 0 50px;
   }
 
   .header__top {
     display: block;
     position: static;
     transform: none;
-    padding: 30px 0;
+    padding: 25px 0;
     border-bottom: 1px solid var(--text-lighter);
     margin-bottom: 40px;
     height: 22px;
