--- a/css/components/portfolio.css
+++ b/css/components/portfolio.css
@@ -1,33 +1,38 @@
 #portfolio {
-    padding: 81px 0;
-    background-color: var(--section-bg);
-    text-align: center;
+  padding: 81px 0;
+  background-color: var(--section-bg);
+  text-align: center;
 }
 
 .portfolio__title {
-    margin-bottom: 65px;
+  margin-bottom: 65px;
 }
 
 .portfolio__item {
-    width: 100%;
+  width: 100%;
 }
 
 .portfolio__item:not(:last-child) {
-    margin-bottom: 77px;
+  margin-bottom: 77px;
 }
 
 .portfolio__img {
-    width: 100%;
-    max-height: 522px;
-    margin-bottom: 44px;
+  width: 90%;
+  max-height: 500px;
+  object-fit: contain;
+  margin-bottom: 44px;
+  padding: 15px;
+  border-radius: 6px;
+  border: 4px solid var(--text-secondary);
+  background-color: var(--main-bg);
 }
 
 .portfolio__link {
-    text-decoration-line: underline;
-    transition: color 0.2s ease;
+  text-decoration-line: underline;
+  transition: color 0.2s ease;
 }
 
 .portfolio__link:hover {
-    color: var(--text-lighter);
-    transition: color 0.3s ease;
+  color: var(--text-lighter);
+  transition: color 0.3s ease;
 }
