--- a/css/components/skils.css
+++ b/css/components/skils.css
@@ -39,9 +39,12 @@
   border-radius: 50%;
   background-color: var(--text-secondary);
   font-size: 36px;
-  line-height: 45px;
   color: var(--bg-light);
   margin-bottom: 20px;
+}
+
+.icon-brand:before {
+  line-height: 45px;
 }
 
 @media screen and (min-width: 768px) {
