--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,23 @@
-@import url('reset.css');
-@import url('variables.css');
-@import url('common.css');
-@import url('components/burger.css');
-@import url('components/header.css');
-@import url('components/about.css');
-@import url('components/skils.css');
-@import url('components/portfolio.css');
-@import url('components/footer.css');
-
-
+@import url("reset.css");
+@import url("variables.css");
+@import url("common.css");
+@import url("components/burger.css");
+@import url("components/header.css");
+@import url("components/about.css");
+@import url("components/skils.css");
+@import url("components/portfolio.css");
+@import url("components/footer.css");
 
 @font-face {
-    font-family: Gilroy500;
-    src: url('../fonts/Gilroy-Medium.ttf') format("truetype"),
-        url('../fonts/Gilroy-Medium.woff') format("woff");
-    font-weight: medium;
+  font-family: Gilroy500;
+  src: url("../fonts/Gilroy-Medium.ttf") format("truetype"),
+    url("../fonts/Gilroy-Medium.woff") format("woff");
+  font-weight: medium;
 }
 
 @font-face {
-    font-family: Gilroy700;
-    src: url('../fonts/Gilroy-Bold.ttf') format("truetype"),
-        url('../fonts/Gilroy-Bold.woff') format("woff");
-    font-weight: bold;
+  font-family: Gilroy700;
+  src: url("../fonts/Gilroy-Bold.ttf") format("truetype"),
+    url("../fonts/Gilroy-Bold.woff") format("woff");
+  font-weight: bold;
 }
