--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  padding: 52px 0;
   text-align: center;
 }
 
@@ -35,7 +34,7 @@
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin: 0 auto 48px;
+  margin: 0 auto;
 }
 
 .footer__social-link > i {
