--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -31,10 +31,16 @@
 
 .footer__social {
   max-width: 345px;
-  display: flex;
+  width: 100%;
+  display: flex !important;
   justify-content: center;
   gap: 20px;
   margin: 0 auto;
+}
+
+.footer__social-item {
+  width: 42px;
+  height: 42px;
 }
 
 .footer__social-link > i {
