--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -32,7 +32,7 @@
 .footer__social {
   max-width: 345px;
   width: 100%;
-  display: flex !important;
+  display: flex;
   justify-content: center;
   gap: 20px;
   margin: 0 auto;
