--- a/css/components/portfolio.css
+++ b/css/components/portfolio.css
@@ -24,7 +24,12 @@
   border-radius: 6px;
   border: 3px solid var(--text-secondary);
   background-color: var(--main-bg);
+  transition: box-shadow 0.3s ease;
 }
+.portfolio__img:hover {
+  box-shadow: 0px 0px 10px 0px var(--text-secondary);
+}
+
 .portfolio__work-name {
   font-style: italic;
   margin-right: 5px;
